--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,8 +14,9 @@ dependencies:
   flutter_riverpod: ^2.5.1
   riverpod_annotation: ^2.3.5
 
-  # Supabase
-  supabase_flutter: ^2.5.6
+  # HTTP & Env
+  http: ^1.2.0
+  flutter_dotenv: ^5.1.0
 
   # Dependency Injection
   get_it: ^7.7.0
@@ -37,7 +38,8 @@ dependencies:
   uuid: ^4.3.3
   url_launcher: ^6.2.5
   geolocator: ^13.0.1
-  
+  image_picker: ^1.0.7
+
   # Printing
   printing: ^5.12.0
   pdf: ^3.10.7
@@ -72,3 +74,5 @@ flutter_launcher_icons:
 
 flutter:
   uses-material-design: true
+  assets:
+    - .env
